facebook_card_UI.css
      p{
        margin-top:0px;
        margin-bottom:0px;
        font-family:'Times New Roman', Times, serif;
        font-size:12px;
      }

      .row{
        display:block;
        margin-bottom:20px;
      }

      .profile{
        display:inline-block;
        vertical-align:top;
       
      }
      
      .info{
        display:inline-block;
        vertical-align:top;
        margin-top:5px;
      }

      .button{
        display:inline-block;
        vertical-align:top;
      }
      button{
        color:white;
        margin-left:30px;
        background-color:rgb(48, 129, 214);
        border:none;
        border-radius:4px;
        padding-left:8px;
        padding-right:8px;
        padding-top:6px;
        padding-bottom:6px;
        cursor:pointer;
        margin-top:20px;
      }
      

      .profile-picture{
        width:70px;
        height:70px;
        object-fit:cover;
        margin-right:10px;
        border-radius:40px;
      }

      .name{
        font-weight:bold;
        margin-bottom:10px;
      }
      .designation{
        color:rgb(96,96,96);
        margin-bottom:10px;
      }

      .stats{
        color:rgb(96,96,96);
      }

